@startuml
!define MODEL_COLOR #FFCCFF
!define CONTROLLER_COLOR #CCCCFF
!define ACTION_COLOR #CCFFCC

package "Models" <<Database>> {
  class User <<Model>> {
    ..
  }
  class Post <<Model>> {
    ..
  }
  class Comment <<Model>> {
    ..
  }
}

package "Controllers" <<Frame>> {
  class UsersController <<Controller>> {
    +index()
  }
  class PostsController <<Controller>> {
    +create()
  }
}

Post --> "1" User : belongs_to
Comment --> "1" User : belongs_to
Comment --> "1" Post : belongs_to
index --> UserService : fetch_active_users
UserService --> User : User.active
GET__api_v1_users --> index : routes_to
POST__api_v1_posts --> create : routes_to

@enduml